Fix line-spacing between headings and centre-align login info on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,13 +99,14 @@ h2 {
     font-weight: 600;
     font-size: 1.25rem;
     text-align: inherit;
+    margin-bottom: 0.5rem;
 }
 
 h3 {
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
-    font-size: 1.25rem;
-    margin-top: .5rem;
+    font-size: 1rem;
+    margin-top: 0rem;
     margin-bottom: 0rem;
 }
 
@@ -122,7 +123,7 @@ a.recipe-title:hover {
 /*Main text*/
 
 #logged-in {
-    text-align: right;
+    text-align: center;
     font-weight: 600;
 }
 
@@ -196,13 +197,17 @@ label {
     h2 {
         font-size: 1.5rem;
         margin-top: 1.5rem;
-        margin-bottom: 0rem;
         }
         
     .illustration {
         margin-bottom: 1rem;
         margin-top: 2rem;
         }
+        
+    #logged-in {
+        text-align: right;
+    }
+    
 }
 
 
